Added Basic Structure the index file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!--Header Section Started-->
+    <header>
+
+    </header>
+
+    <!--Main Section Started-->
+    <main>
+
+    </main>
+
+    <!-- Footer Section Started-->
+    <footer>
+
+
+    </footer>
 </body>
 </html>
