--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
+
+<body class="font-open-sans">
+
     <!--Header Section Started-->
     <header>
-        <div>
-            <h3>Mary</h3>
+        <!--This is Navigation at the top-->
+        <nav>
+            <div class="logo">
+            <h2>Ma<span class="color-orange">r</span>y</h2>
         </div>
-        <div>
+        
+        <ul class="menu">
             <li><a href="">Portfolio</a></li>
             <li><a href="">Blog</a></li>
-            <li><button>Hire Me</button></li>
-        </div>
+            <li><button class="btn">Hire Me</button></li>
+        </ul>
+        </nav>
+        
     </header>
 
     <!--Main Section Started-->
