--- a/index.html
+++ b/index.html
@@ -152,15 +152,45 @@
                     </div>
                 </div>
             </div>
-            <div class="section-heading">
+        </div>
+
+        <div class="tex-center">
                 <button class="btn">Download CV</button>
-            </div>
         </div>
     </section>
 
     <!-- Footer Section Started-->
     <footer>
+            <section class="footer-containter">
+                <div class="social">
+                    <h2>Lets Connect</h2>
+                    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
 
+                    <div class="icons">
+                        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                        <a href=""><img src="images/icons/insta.png" alt=""></a>
+
+                    </div>
+                </div>
+                <form class="form">
+                    <h2>Let’s Message me</h2>
+                    <div class="">
+                        <input type="text" name="" id="" placeholder="Your Name">
+                    </div>
+                    <div class="">
+                        <input type="email" name="" id="" placeholder="Your Email">
+                    </div>
+                    <div class="">
+                        <textarea rows="10" name="" id="" placeholder="Your Message"></textarea>
+                    </div>
+                    <div class="">
+                        <input class="btn" type="submit" value="Submit">
+                    </div>
+                </form>
+                    
+
+            </section>
 
     </footer>
 </body>
