--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="font-open-sans">
@@ -35,8 +36,8 @@
                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments. 
                 </p>
                 <div>
-                    <button class="btn">Download CV</button>
-                    <button class="btn">Contact</button>
+                    <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
+                    <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
             </div>
             <div class="banner-image">
@@ -155,7 +156,7 @@
         </div>
 
         <div class="tex-center">
-                <button class="btn">Download CV</button>
+                <button class="btn"><i class="fa-solid fa-download"></i>Download CV</button>
         </div>
     </section>
 
